# opengl_learn

./: CMakeLists.txt  glad.c  main.cpp
include/: shader.h  stb_image.cpp
shaders/: shader.fs  shader.vs
